Switched to 0.2-SNAPSHOT